--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Functional programming experimentation",
   "main": "index.js",
   "scripts": {
+    "jsdoc": "jsdoc lib",
     "test": "standard --verbose | snazzy && mocha --harmony_arrow_functions"
   },
   "repository": {
@@ -24,6 +25,7 @@
   "homepage": "https://github.com/TheLudd/unary#readme",
   "devDependencies": {
     "chai": "^3.2.0",
+    "jsdoc": "^3.3.2",
     "mocha": "^2.2.5",
     "snazzy": "^2.0.1",
     "standard": "^5.1.0"
