--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "Functional programming experimentation",
   "main": "index.js",
   "scripts": {
+    "acceptance": "mocha testrunners/acceptance",
+    "bundle": "./build/bundle",
+    "deploy": "npm run bundle && npm run acceptance && changeify",
     "jsdoc": "jsdoc -c jsdoc.json lib",
-    "test": "standard --verbose | snazzy && mocha --harmony_arrow_functions"
+    "test": "standard --verbose | snazzy && mocha testrunners/unit"
   },
   "repository": {
     "type": "git",
@@ -30,5 +33,8 @@
     "mocha": "^2.2.5",
     "snazzy": "^2.0.1",
     "standard": "^5.1.0"
+  },
+  "dependencies": {
+    "changeify": "^0.1.2"
   }
 }
