--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "unary",
+  "name": "yafu",
   "version": "0.0.1",
   "description": "Functional programming experimentation",
-  "main": "./dist/unary",
+  "main": "./dist/yafu",
   "scripts": {
     "acceptance": "mocha testrunners/acceptance",
     "bundle": "./build/bundle",
@@ -12,12 +12,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/TheLudd/unary.git"
+    "url": "git+https://github.com/TheLudd/yafu.git"
   },
   "author": "Ludwig Magnusson",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/TheLudd/unary/issues"
+    "url": "https://github.com/TheLudd/yafu/issues"
   },
   "standard": {
     "global": [
@@ -25,7 +25,7 @@
       "it"
     ]
   },
-  "homepage": "https://github.com/TheLudd/unary#readme",
+  "homepage": "https://github.com/TheLudd/yafu#readme",
   "devDependencies": {
     "babel": "^5.8.23",
     "camel-case": "^1.1.2",
@@ -33,7 +33,7 @@
     "jsdoc": "^3.3.2",
     "mocha": "^2.2.5",
     "snazzy": "^2.0.1",
-    "standard": "^5.1.0"
+    "standard": "~5.1.0"
   },
   "dependencies": {
     "changeify": "^0.1.2"
