--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "bundle": "./build/bundle",
     "deploy": "npm run bundle && npm run acceptance && changeify",
     "jsdoc": "jsdoc -c jsdoc.json lib",
-    "test": "standard --verbose | snazzy && mocha testrunners/unit"
+    "test": "standard --verbose | snazzy && mocha testrunners/unit",
+    "unit": "mocha testrunners/unit"
   },
   "repository": {
     "type": "git",
