--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel": "^5.8.23",
     "camel-case": "^1.1.2",
     "chai": "^3.2.0",
+    "glob": "^7.0.3",
     "jsdoc": "^3.3.2",
     "mocha": "^2.2.5",
     "snazzy": "^2.0.1",
