--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "acceptance": "mocha testrunners/acceptance",
     "bundle": "./build/bundle",
-    "deploy": "npm run bundle && npm run acceptance && changeify -p",
+    "clean": "rm -r dist",
+    "deploy": "npm run clean && npm run bundle && npm run acceptance && changeify -p",
     "jsdoc": "jsdoc -c jsdoc.json lib",
     "test": "standard --verbose | snazzy && mocha testrunners/unit",
     "unit": "mocha testrunners/unit"
