--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "./dist/yafu",
   "scripts": {
     "acceptance": "mocha testrunners/acceptance",
-    "bundle": "./build/bundle",
+    "bundle": "./build/bundle && npm run uglify",
     "clean": "rm -r dist",
     "deploy": "npm run clean && npm run bundle && npm run acceptance && changeify -p",
     "jsdoc": "jsdoc -c jsdoc.json lib",
     "test": "standard --verbose | snazzy && mocha testrunners/unit",
+    "uglify": "uglifyjs -m -p relative --source-map dist/yafu.min.map -o dist/yafu.min.js dist/yafu.js",
     "unit": "mocha testrunners/unit"
   },
   "repository": {
@@ -29,7 +30,11 @@
   },
   "homepage": "https://github.com/TheLudd/yafu#readme",
   "devDependencies": {
-    "babel": "^5.8.23",
+    "babel-cli": "^6.18.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-es2015-modules-umd": "^6.18.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-register": "^6.18.0",
     "camel-case": "^1.1.2",
     "chai": "^3.2.0",
     "changeify": "^0.1.2",
@@ -37,7 +42,8 @@
     "jsdoc": "^3.3.2",
     "mocha": "^2.2.5",
     "snazzy": "^2.0.1",
-    "standard": "~5.1.0"
+    "standard": "~5.1.0",
+    "uglify-js": "^2.7.4"
   },
   "files": [
     "dist"
