--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "jsdoc": "^3.3.2",
     "mocha": "^2.2.5",
     "snazzy": "^2.0.1",
-    "standard": "~5.1.0",
+    "standard": "^8.5.0",
     "uglify-js": "^2.7.4"
   },
   "files": [
