--- a/package.json
+++ b/package.json
@@ -36,12 +36,13 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-register": "^6.18.0",
     "camel-case": "^3.0.0",
-    "chai": "^3.2.0",
+    "chai": "^4.1.2",
     "changeify": "^0.1.2",
     "glob": "^7.0.3",
     "jsdoc": "^3.3.2",
-    "mocha": "^3.1.2",
+    "mocha": "^4.0.1",
     "snazzy": "^5.0.0",
+    "source-map-support": "^0.5.0",
     "standard": "^8.5.0",
     "uglify-js": "^2.7.4"
   },
