--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "clean": "rm -r dist",
     "deploy": "yarn run clean && yarn run bundle && yarn run acceptance && changeify -p",
     "jsdoc": "jsdoc -c jsdoc.json lib",
-    "test": "standard --verbose | snazzy && mocha testrunners/unit",
+    "test": "standard --verbose | snazzy && yarn unit",
     "uglify": "uglifyjs -m -p relative --source-map dist/yafu.min.map -o dist/yafu.min.js dist/yafu.js",
     "unit": "mocha testrunners/unit"
   },
@@ -30,19 +30,18 @@
   },
   "homepage": "https://github.com/TheLudd/yafu#readme",
   "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-es2015-modules-umd": "^6.18.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-register": "^6.18.0",
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/register": "^7.9.0",
+    "babel-plugin-add-module-exports": "1.0.2",
     "camel-case": "^3.0.0",
-    "chai": "^4.1.2",
+    "chai": "^4.2.0",
     "changeify": "^0.1.2",
-    "glob": "^7.0.3",
-    "jsdoc": "^3.3.2",
-    "mocha": "^4.0.1",
+    "glob": "^7.1.6",
+    "jsdoc": "^3.6.4",
+    "mocha": "^7.1.1",
     "snazzy": "^5.0.0",
-    "source-map-support": "^0.5.0",
+    "source-map-support": "^0.5.16",
     "standard": "^8.5.0",
     "uglify-js": "^2.7.4"
   },
