--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "./dist/yafu",
   "scripts": {
     "acceptance": "mocha testrunners/acceptance",
-    "bundle": "./build/bundle && yarn run uglify",
+    "prebundle": "node build/create-index",
+    "bundle": "yarn clean && rollup -c && yarn run uglify",
+    "postbundle": "rm index.js",
     "clean": "rm -r dist",
-    "deploy": "yarn run clean && yarn run bundle && yarn run acceptance && changeify -p",
+    "deploy": "yarn clean && yarn run bundle && yarn run acceptance && changeify -p",
     "jsdoc": "jsdoc -c jsdoc.json lib",
     "test": "standard --verbose | snazzy && yarn unit",
-    "uglify": "uglifyjs -m -p relative --source-map dist/yafu.min.map -o dist/yafu.min.js dist/yafu.js",
+    "uglify": "uglifyjs -m -o dist/yafu.min.js dist/yafu.js --source-map 'url=yafu.min.js.map'",
     "unit": "mocha testrunners/unit"
   },
   "repository": {
@@ -33,17 +35,19 @@
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
     "@babel/register": "^7.9.0",
+    "@rollup/plugin-node-resolve": "^7.1.3",
     "babel-plugin-add-module-exports": "1.0.2",
     "camel-case": "^3.0.0",
     "chai": "^4.2.0",
     "changeify": "^0.1.2",
-    "glob": "^7.1.6",
     "jsdoc": "^3.6.4",
     "mocha": "^7.1.1",
+    "rollup": "^2.6.1",
+    "rollup-plugin-babel": "^4.4.0",
     "snazzy": "^5.0.0",
     "source-map-support": "^0.5.16",
     "standard": "^8.5.0",
-    "uglify-js": "^2.7.4"
+    "uglify-js": "^3.9.1"
   },
   "files": [
     "dist"
